# eurocoin-gdp-forecast

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: base.yaml  data_extended.yaml  data_public.yaml  gdp_vintages.yaml
data/: Ecoin_realtime.xlsx
data/processed/: panel_monthly.parquet
docs/: literature_review.md  openalex_focused.json  openalex_raw.json  openalex_specific.json  research_plan.md  series_catalog.csv
lightning_logs/version_0/: events.out.tfevents.1782941553.ampere
lightning_logs/version_1/: events.out.tfevents.1782941556.ampere
lightning_logs/version_10/: events.out.tfevents.1782942344.ampere
lightning_logs/version_11/: events.out.tfevents.1782942344.ampere
lightning_logs/version_12/: events.out.tfevents.1782942354.ampere
lightning_logs/version_13/: events.out.tfevents.1782942354.ampere  hparams.yaml
lightning_logs/version_14/: events.out.tfevents.1782942999.ampere
lightning_logs/version_15/: events.out.tfevents.1782943000.ampere  hparams.yaml
lightning_logs/version_16/: events.out.tfevents.1782943000.ampere
lightning_logs/version_17/: events.out.tfevents.1782943002.ampere  hparams.yaml
lightning_logs/version_18/: events.out.tfevents.1782943002.ampere  hparams.yaml
lightning_logs/version_19/: events.out.tfevents.1782943124.ampere
lightning_logs/version_2/: events.out.tfevents.1782941556.ampere  hparams.yaml
lightning_logs/version_21/: hparams.yaml  (+1 more)
tests/: run_backtest.py  test_ecb_loader.py  test_ecb_sdmx.py  test_full_panel.py  test_gdfm.py  test_transformers.py  test_transformers_quick.py
(+101 files in other folders)
