[project]
name = "eurocoin-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "river>=0.25.0",
    "scipy>=1.17.1",
    "sdmx1>=2.26.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
